fixes to logo visibility

--- a/src/components/neurostack-docs/Sidebar.scss
+++ b/src/components/neurostack-docs/Sidebar.scss
@@ -3,6 +3,7 @@
     height: 100%;
     border-right: 1px solid lightgrey;
     position: fixed;
+    background-color: white;
 }
 
 .ns-docs-sidebar p{
@@ -21,6 +22,8 @@
   height: 100px;
   object-fit: cover;
   object-position: -10px -40px;
+  background-color: #4ac2d2;
+  padding-bottom: 10px;
 }
 
 .ns-docs-sidebar-slide{
